Aria-Label for Sign up button

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                 </div>
                 <p class="mb-6 text-cyan-300 dark:text-cyan-400">Full access for less than $1 a day</p>
                 <button
-                    class="w-full py-2 transition-all border-2 border-transparent rounded shadow-xl hover:border-lime-500 bg-lime-500 hover:bg-transparent">Sign
+                    class="w-full py-2 transition-all border-2 border-transparent rounded shadow-xl hover:border-lime-500 bg-lime-500 hover:bg-transparent"
+                    aria-label="Sign Up Button">Sign
                     Up</button>
             </div>
             <div class="w-full p-10 sm:w-1/2 bg-cyan-500 dark:bg-cyan-600 text-slate-50">
