--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <!-- Dark mode toggle -->
-    <button class="absolute top-5 right-5 hover:animate-spin-slow">
+    <button class="absolute top-5 right-5 hover:animate-spin-slow" aria-label="Dark Mode">
         <!-- Light Mode -->
         <svg xmlns="http://www.w3.org/2000/svg" class="sun icon icon-tabler icon-tabler-sun-filled" width="24"
             height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
