--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontendmentor Challenge: Single price grid component</title>
-
+    
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="./dist/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
